improvement: corrected text content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div>
-            История Игры
+            История Игр:
             <span class="gameHistory">
                 
             </span>
@@ -29,7 +29,7 @@
 
         <div class="stat">
             <table>
-                <tr colspan="2">Результат:</tr>
+                <tr colspan="2">Результаты:</tr>
                 <tr>
                     <td>Выиграл X</td>
                     <td id="sX">0</td>
